--- a/.i3/config
+++ b/.i3/config
@@ -413,5 +413,6 @@ for_window [instance="^scratchpad$"] move scratchpad
 
 
 # toggle mouse
+exec --no-startup-id xinput --disable 12
 bindsym $mod+m exec xinput --disable 12
 bindsym $mod+Shift+m exec xinput --enable 12
