--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,6 +1,6 @@
 [global_config]
   borderless = True
-  title_font = Meslo LG M for Powerline 11
+  title_font = Source Code Pro for Powerline Heavy 8
   title_use_system_font = False
 [keybindings]
 [layouts]
@@ -24,12 +24,12 @@
     show_titlebar = False
     use_theme_colors = True
   [[alamin]]
-    background_color = "#002b36"
+    background_color = "#282828"
     background_darkness = 0.6
     background_type = transparent
     cursor_color = "#aaaaaa"
     font = Source Code Pro for Powerline Heavy 8
-    foreground_color = "#839496"
+    foreground_color = "#ebdbb2"
     login_shell = True
     palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
     scrollbar_position = hidden
