--- a/.emacs.d/.emacs.desktop
+++ b/.emacs.d/.emacs.desktop
@@ -2,19 +2,19 @@
 ;; --------------------------------------------------------------------------
 ;; Desktop File for Emacs
 ;; --------------------------------------------------------------------------
-;; Created Fri Sep  1 17:13:49 2017
+;; Created Fri Sep  1 17:28:19 2017
 ;; Desktop file format version 208
 ;; Emacs version 25.2.1
 
 ;; Global section:
-(setq desktop-saved-frameset [frameset 1 (22953 16621 183771 156000) (desktop . "208") "alamin@laptop" nil nil ((((font-backend xft x) (font . "-DAMA-Ubuntu Mono-normal-normal-normal-*-17-*-*-*-m-0-iso10646-1") (font-parameter . "Ubuntu Mono 13") (border-width . 0) (internal-border-width . 0) (right-divider-width . 0) (bottom-divider-width . 0) (vertical-scroll-bars) (horizontal-scroll-bars) (foreground-color . "#eaeaea") (background-color . "#000000") (mouse-color . "black") (border-color . "#424242") (screen-gamma) (line-spacing) (left-fringe . 8) (right-fringe . 8) (scroll-bar-foreground . "#ebdbb2") (scroll-bar-background . "#ebdbb2") (menu-bar-lines . 0) (tool-bar-lines . 0) (title) (wait-for-wm . t) (tool-bar-position . top) (icon-type . t) (auto-raise) (auto-lower) (cursor-type . box) (scroll-bar-width . 0) (scroll-bar-height . 0) (alpha) (fullscreen) (display-type . color) (background-mode . dark) (cursor-color . "#d54e53") (environment) (sticky) (frameset--id . "CCB2-7248-DB4F-0404") (frameset--mini t . t) (modeline . t) (minibuffer . t) (unsplittable) (icon-name) (display . ":0") (explicit-name) (visibility . t) (height . 26) (width . 74) (left . 683) (top . 321)) ((min-height . 4) (min-width . 10) (min-height-ignore . 2) (min-width-ignore . 4) (min-height-safe . 1) (min-width-safe . 2) (min-pixel-height . 68) (min-pixel-width . 90) (min-pixel-height-ignore . 34) (min-pixel-width-ignore . 36) (min-pixel-height-safe . 17) (min-pixel-width-safe . 18)) leaf (pixel-width . 683) (pixel-height . 430) (total-width . 76) (total-height . 25) (normal-height . 1.0) (normal-width . 1.0) (buffer "volume" (selected . t) (hscroll . 0) (fringes 8 8 nil) (margins nil) (scroll-bars nil 0 t nil 0 t) (vscroll . 0) (dedicated) (point . 2739) (start . 2335))))])
+(setq desktop-saved-frameset [frameset 1 (22953 17491 25248 782000) (desktop . "208") "root@laptop" nil nil ((((font-backend xft x) (font . "-DAMA-Ubuntu Mono-normal-normal-normal-*-17-*-*-*-m-0-iso10646-1") (font-parameter . "Ubuntu Mono 13") (border-width . 0) (internal-border-width . 0) (right-divider-width . 0) (bottom-divider-width . 0) (vertical-scroll-bars) (horizontal-scroll-bars) (foreground-color . "#eaeaea") (background-color . "#000000") (mouse-color . "black") (border-color . "#424242") (screen-gamma) (line-spacing) (left-fringe . 8) (right-fringe . 8) (scroll-bar-foreground . "#ebdbb2") (scroll-bar-background . "#ebdbb2") (menu-bar-lines . 0) (tool-bar-lines . 0) (title) (wait-for-wm . t) (tool-bar-position . top) (icon-type . t) (auto-raise) (auto-lower) (cursor-type . box) (scroll-bar-width . 0) (scroll-bar-height . 0) (alpha) (fullscreen . fullboth) (display-type . color) (background-mode . dark) (cursor-color . "#d54e53") (sticky) (environment) (frameset--id . "CCB2-7248-DB4F-0404") (frameset--mini t . t) (modeline . t) (minibuffer . t) (unsplittable) (icon-name) (display . ":2") (explicit-name) (visibility . t) (height . 45) (width . 150) (left . 0) (top . 0)) ((min-height . 4) (min-width . 10) (min-height-ignore . 2) (min-width-ignore . 4) (min-height-safe . 1) (min-width-safe . 2) (min-pixel-height . 68) (min-pixel-width . 90) (min-pixel-height-ignore . 34) (min-pixel-width-ignore . 36) (min-pixel-height-safe . 17) (min-pixel-width-safe . 18)) leaf (pixel-width . 1366) (pixel-height . 751) (total-width . 152) (total-height . 44) (normal-height . 1.0) (normal-width . 1.0) (buffer "i3lock.sh" (selected . t) (hscroll . 0) (fringes 8 8 nil) (margins nil) (scroll-bars nil 0 t nil 0 t) (vscroll . 0) (dedicated) (point . 155) (start . 1))))])
 (setq comint-input-ring nil)
 (setq compile-history nil)
 (setq desktop-missing-file-warning nil)
 (setq dired-regexp-history nil)
 (setq extended-command-history '("lis" "list-color"))
 (setq face-name-history nil)
-(setq file-name-history '("~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/etc/rc0.d/K01alsa-utils" "~/.emacs.d/org-clock-save.el" "/etc/rc0.d/K01alsa-utils" "/etc/rc.d" "~/*scratch*" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/bill.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/hello.c" "~/.emacs.d/org-clock-save.el" "~/Linux_Playground/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "/home/alamin/Dropbox/log-files/all_log.org" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/all_log.org" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "/home/alamin/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "~/dotfiles/zsh/.zshrc" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.emacs.d/recentf" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.config/neofetch/config" "~/dotfiles/.emacs.d/recentf"))
+(setq file-name-history '("~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3lock/i3lock.sh" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.config/i3lock/i3lock.sh" "/home/alamin/.config/i3lock/i3lock.sh" "/home/alamin/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/etc/rc0.d/K01alsa-utils" "~/.emacs.d/org-clock-save.el" "/etc/rc0.d/K01alsa-utils" "/etc/rc.d" "~/*scratch*" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/bill.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/hello.c" "~/.emacs.d/org-clock-save.el" "~/Linux_Playground/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "/home/alamin/Dropbox/log-files/all_log.org" "~/dotfiles/.emacs.d/recentf"))
 (setq grep-find-history nil)
 (setq grep-history nil)
 (setq ido-buffer-history nil)
@@ -37,6 +37,30 @@
 (setq tags-table-list nil)
 
 ;; Buffer section -- buffers listed in same order as in buffer list:
+(desktop-create-buffer 208
+  "/home/alamin/dotfiles/.config/i3lock/i3lock.sh"
+  "i3lock.sh"
+  'sh-mode
+  '(anzu-mode global-auto-revert-mode undo-tree-mode whole-line-or-region-local-mode hes-mode whitespace-cleanup-mode auto-compile-on-load-mode immortal-scratch-mode projectile-mode guide-key-mode goto-address-prog-mode paredit-everywhere-mode bug-reference-prog-mode diff-hl-mode symbol-overlay-mode rainbow-delimiters-mode company-mode counsel-mode flycheck-mode)
+  155
+  '(nil nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix))
+  '((mark-ring nil)))
+
+(desktop-create-buffer 208
+  "/home/alamin/dotfiles/.i3/config"
+  "config"
+  'conf-space-mode
+  '(anzu-mode global-auto-revert-mode undo-tree-mode whole-line-or-region-local-mode hes-mode whitespace-cleanup-mode auto-compile-on-load-mode immortal-scratch-mode projectile-mode guide-key-mode company-mode counsel-mode flycheck-mode text-scale-mode)
+  15911
+  '(15883 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix) (overwrite-mode))
+  '((mark-ring (15883 15883 15882 15849 15849 6025 6212 14634 14634 6153 6261 15882 15882 15883 15862 15903))))
+
 (desktop-create-buffer 208
   "/home/alamin/dotfiles/scripts/i3blocks_scripts/volume"
   "volume"
@@ -146,18 +170,6 @@
   '((mark-ring (80605 82955 96747 1 96647))))
 
 (desktop-create-buffer 208
-  "/home/alamin/dotfiles/.i3/config"
-  "config"
-  'conf-space-mode
-  '(anzu-mode global-auto-revert-mode undo-tree-mode whole-line-or-region-local-mode hes-mode whitespace-cleanup-mode auto-compile-on-load-mode immortal-scratch-mode projectile-mode guide-key-mode company-mode counsel-mode flycheck-mode text-scale-mode)
-  15820
-  '(15884 nil)
-  nil
-  nil
-  '((buffer-file-coding-system . utf-8-unix) (overwrite-mode))
-  '((mark-ring (15884 15884 15883 15849 15849 6025 6212 14634 14634 6153 6261 15883 15883 15884 15862 15904))))
-
-(desktop-create-buffer 208
   "/home/alamin/dotfiles/zsh/.zshrc"
   ".zshrc"
   'sh-mode
@@ -191,5 +203,17 @@
   t
   '("/home/alamin/dotfiles/.i3/")
   nil
+  '((mark-ring nil)))
+
+(desktop-create-buffer 208
+  "/home/alamin/dotfiles/.emacs.d/recentf"
+  "recentf"
+  'fundamental-mode
+  '(anzu-mode global-auto-revert-mode undo-tree-mode whole-line-or-region-local-mode hes-mode whitespace-cleanup-mode auto-compile-on-load-mode immortal-scratch-mode projectile-mode guide-key-mode company-mode counsel-mode)
+  1
+  '(nil nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-emacs-unix))
   '((mark-ring nil)))
 
