--- a/.emacs.d/.gitignore
+++ b/.emacs.d/.gitignore
@@ -1,55 +1,7 @@
-# -*- mode: gitignore; -*-
-*~
-\#*\#
-/.emacs.desktop
-/.emacs.desktop.lock
-*.elc
-auto-save-list
-tramp
-.\#*
+# Ignore Everything 
+*
 
-# Org-mode
-.org-id-locations
-*_archive
-
-# flymake-mode
-*_flymake.*
-
-# eshell files
-/eshell/history
-/eshell/lastdir
-
-# elpa packages
-/elpa/
-
-# reftex files
-*.rel
-
-# AUCTeX auto folder
-/auto/
-
-# cask packages
-.cask/
-dist/
-
-# Flycheck
-flycheck_*.el
-
-# server auth directory
-/server/
-
-# projectiles files
-.projectile
-
-# directory configuration
-.dir-locals.el
-
-# user-specific
-*.el
-!init.el
-auto-save-list/
-backups/
-elisp/
-eshell/
-semanticdb/
-savehist
+# but not the following files
+!.gitignore
+!.init.el
+!.README.org
