--- a/.i3/config
+++ b/.i3/config
@@ -186,8 +186,6 @@ bindsym XF86MonBrightnessUp exec --no-startup-id ${HOME}/scripts/backlight.sh -i
 bindsym --release Print exec --no-startup-id "maim -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 bindsym --release Shift+Print exec --no-startup-id "maim -s -p 0 -c 0.96,0.5,0.09 $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png"
 
-bindsym $mod+n exec --no-startup-id files
-
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -432,13 +430,19 @@ hide_edge_borders both
 #for_window [instance="^scratchpad$"] move scratchpad
 
 #manage toggle mouse
-exec --no-startup-id xinput --enable 12
-bindsym $mod+m exec xinput --disable 12
+exec --no-startup-id xinput --disable 12
+bindsym $mod+Mod1+m exec xinput --disable 12
 bindsym $mod+Shift+m exec xinput --enable 12
 
 # dropbox
 bindsym Mod1+Hyper_L exec dropbox start
 bindsym Mod1+Shift+Hyper_L exec dropbox stop
+
+# emacs
+bindsym $mod+m exec --no-startup-id emacs
+
+# nautilus
+bindsym $mod+n exec --no-startup-id nautilus
 
 # Max Sound
 bindsym Mod1+F12 exec pactl set-sink-mute 0 0 && pactl set-sink-volume 0 150%
@@ -458,10 +462,11 @@ exec --no-startup-id blueman-applet &
 exec --no-startup-id redshift-gtk &
 
 exec --no-startup-id dunst &
-exec --no-startup-id xedgewarp -b
+exec --no-startup-id xedgewarp -b &
 
-exec --no-startup-id compton -b
-exec --no-startup-id ibus-daemon --xim
+exec --no-startup-id compton -b &
+exec --no-startup-id ibus-daemon &
+bindsym $mod+Shift+i exec ibus restart
 
 
 # Multi monitor setup
@@ -484,7 +489,6 @@ workspace $ws3 output HDMI-2
 workspace $ws4 output HDMI-2
 workspace $ws5 output HDMI-2
 workspace $ws6 output HDMI-2
-workspace $ws7 output HDMI-2
 workspace $ws7 output HDMI-2
 workspace $ws8 output eDP-1
 workspace $ws9 output HDMI-2
