Update Before Cleansing

--- a/_tmux-mine/.tmux.conf
+++ b/_tmux-mine/.tmux.conf
@@ -42,9 +42,6 @@ setw -q -g utf8 on
 # history-limit
 set -g history-limit 5000
 
-# Set Mouse
-set -g mouse on
-
 # edit configuration
 bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-emacs} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
@@ -126,6 +123,10 @@ bind -n M-> swap-pane -D #swap current pane with the next one
 bind -n M-< swap-pane -U #swap current pane with the previous one
 
 bind Tab last-window        # move to last active window
+
+
+# toggle mouse
+bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 
 
 # -- urlview -------------------------------------------------------------------
@@ -250,6 +251,20 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   else
 #     $restore || tmux kill-pane
 #   fi
+# }
+#
+# _toggle_mouse() {
+#   old=$(tmux show -gv mouse)
+#   new=""
+#
+#   if [ "$old" = "on" ]; then
+#     new="off"
+#   else
+#     new="on"
+#   fi
+#
+#   tmux set -g mouse $new \;\
+#        display "mouse: $new"
 # }
 #
 # _battery() {
@@ -781,7 +796,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_theme_mode_attr=${tmux_conf_theme_mode_attr:-'bold'}
 #   tmux setw -g mode-style "fg=$tmux_conf_theme_mode_fg,bg=$tmux_conf_theme_mode_bg,$tmux_conf_theme_mode_attr"
 #
-#   tmux_conf_theme_status_fg=${tmux_conf_theme_status_fg:-'#ff0000'} # white
+#   tmux_conf_theme_status_fg=${tmux_conf_theme_status_fg:-'#8a8a8a'} # white
 #   tmux_conf_theme_status_bg=${tmux_conf_theme_status_bg:-'#080808'} # dark gray
 #   tmux_conf_theme_status_attr=${tmux_conf_theme_status_attr:-'none'}
 #   tmux  set -g status-style "fg=$tmux_conf_theme_status_fg,bg=$tmux_conf_theme_status_bg,$tmux_conf_theme_status_attr"        \;\
@@ -821,7 +836,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_theme_window_status_bell_attr=${tmux_conf_theme_window_status_bell_attr:-'blink,bold'}
 #   tmux setw -g window-status-bell-style "fg=$tmux_conf_theme_window_status_bell_fg,bg=$tmux_conf_theme_window_status_bell_bg,$tmux_conf_theme_window_status_bell_attr"
 #
-#   tmux_conf_theme_window_status_last_fg=${tmux_conf_theme_window_status_last_fg:-'default'} # default
+#   tmux_conf_theme_window_status_last_fg=${tmux_conf_theme_window_status_last_fg:-'#00afff'} # light blue
 #   tmux_conf_theme_window_status_last_bg=${tmux_conf_theme_window_status_last_bg:-'default'}
 #   tmux_conf_theme_window_status_last_attr=${tmux_conf_theme_window_status_last_attr:-'none'}
 #   tmux setw -g window-status-last-style "fg=$tmux_conf_theme_window_status_last_fg,bg=$tmux_conf_theme_window_status_last_bg,$tmux_conf_theme_window_status_last_attr"
